@@ -1,55 +1,4 @@
 #!/usr/bin/perl
-# $Id$
-#
-# Script:
-#   $RCSfile$
-#
-# Usage:
-#   cssh [options] [hostnames] [...]
-#
-# Options:
-#   see pod documentation
-#
-# Parameters:
-#   hosts to open connection to
-#
-# Purpose:
-#   Concurrently administer multiple remote servers
-#
-# Dependencies:
-#   Perl 5.6.0
-#   Tk 800.022
-#
-# Limitations:
-#
-# Enhancements:
-#
-# Notes:
-#
-# License:
-#   This code is distributed under the terms of the GPL (GNU General Pulic
-#   License).
-#
-#   Copyright (C)
-#
-#   This program is free software; you can redistribute it and/or modify it
-#   under the terms of the GNU General Public License as published by the
-#   Free Software Foundation; either version 2 of the License, or any later
-#   version.
-#
-#   This program is distributed in the hope that it will be useful, but
-#   WITHOUT ANY WARRANTY; without even the implied warranty of
-#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
-#   Public License for more details.
-#
-#   You should have received a copy of the GNU General Public License along
-#   with this program; if not, write to the Free Software Foundation, Inc.,
-#   59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
-#
-#   Please see the full text of the licenses is in the file COPYING and also at
-#     http://www.opensource.org/licenses/gpl-license.php
-#
-############################################################################
 use strict;
 use warnings;
 
@@ -781,16 +730,25 @@ L<Tk::overview>,
 L<X11::Protocol>,
 L<perl>
 
-=head1 AUTHOR
-
-Duncan Ferguson
-
 =head1 CREDITS
-
-clusterssh is distributed under the GNU public license.  See the file
-F<LICENSE> for details.
 
 A web site for comments, requests, bug reports and bug fixes/patches is
 available at L<http://clusterssh.sourceforge.net/>
 
+=head1 AUTHOR
+
+Duncan Ferguson, C<< <duncan_j_ferguson at yahoo.co.uk> >>
+
+=head1 LICENSE AND COPYRIGHT
+
+Copyright 1999-2010 Duncan Ferguson.
+
+This program is free software; you can redistribute it and/or modify it
+under the terms of either: the GNU General Public License as published
+by the Free Software Foundation; or the Artistic License.
+
+See http://dev.perl.org/licenses/ for more information.
+
 =cut
+
+1;
